--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- tailwind css -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!--  -->
 </head>
+
 <body>
-    
+    <header>
+        <div class=" max-w-[1240px] m-auto flex flex-col md:flex-row  justify-between">
+            <div>
+                <h1 class="text-[80px] font-bold">It's good <br>
+                    tea time at The <br>Tea House</h1>
+                <p class="text-[18px] text-gray-500 my-4">Tea and Botanical Solutions Supplier Give Optimum
+                    <br>Satisfaction To Your Taste Buds.
+                </p>
+                <button class="text-white w-[200px] p-4 bg-gradient-to-r from-[#ff8938] to-[#ff0000] rounded-md">Explore
+                    More</button>
+            </div>
+            <div class="relative">
+                <img src="./images/banner.png" class="relative top-[100px]" alt="">
+                <div class="flex items-center gap-4 bg-white absolute left-[100px] w-[260px] min-h-20 rounded-md ">
+                    <div><span class="ml-10"><i class="fa-solid fa-star"></i></span></div>
+                    <div>
+                        <p class="font-bold text-xl">5.00</p>
+                        <p class="text-gray-600">Trust pilot rating</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="max-w-[1240px] m-auto my-[150px]">
+            <h2 class="text-5xl font-semibold text-center">Our Featured Products</h2>
+            <p class="font-medium text-slate-400 text-center  md:w-[900px] m-auto mt-8">There are many variations of
+                passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
+                humour, or randomised words which don't look even slightly believable. </p>
+            <div class="mt-10  grid grid-cols-1 md:grid-cols-4 gap-5">
+                <div class="bg-gradient-to-b from-[#f4f4f4] to-[rgba(244, 244, 244, 0)]">
+                    <img src="./images/tea-1.png" class="mx-auto block pt-5" alt="">
+                    <h3 class="text-center text-xl font-medium my-5">Milk Tea</h3>
+                    <p class="text-center text-slate-400">Creamer could be replaced <br> by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-[#f4f4f4] to-[rgba(244, 244, 244, 0)]">
+                    <img src="./images/tea-2.png" class="mx-auto block pt-5" alt="">
+                    <h3 class="text-center text-xl font-medium my-5">Milk Tea</h3>
+                    <p class="text-center text-slate-400">Creamer could be replaced <br> by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-[#f4f4f4] to-[rgba(244, 244, 244, 0)]">
+                    <img src="./images/tea-3.png" class="mx-auto block pt-5" alt="">
+                    <h3 class="text-center text-xl font-medium my-5">Milk Tea</h3>
+                    <p class="text-center text-slate-400">Creamer could be replaced <br> by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-[#f4f4f4] to-[rgba(244, 244, 244, 0)]">
+                    <img src="./images/tea-4.png" class="mx-auto block pt-5" alt="">
+                    <h3 class="text-center text-xl font-medium my-5">Milk Tea</h3>
+                    <p class="text-center text-slate-400">Creamer could be replaced <br> by fresh milk</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
